@@ -73,7 +73,7 @@ int dicread(const char *filename)
 	FILE *fp;
 
 	if (filename!=NULL) {
-		filename = KP_find_file(&kp_dict,filename);
+		filename = KP_find_dict_file(filename);
 		if(kpse_in_name_ok(filename))
 			fp=nkf_open(filename,"rb");
 		else
@@ -100,7 +100,7 @@ int dicread(const char *filename)
 ENV:
 	envfile=kpse_var_value("INDEXDEFAULTDICTIONARY");
 	if ((envfile!=NULL)&&(strlen(envfile)!=0)) {
-		envfile = KP_find_file(&kp_dict,envfile);
+		envfile = KP_find_dict_file(envfile);
 		if(kpse_in_name_ok(envfile))
 			fp=nkf_open(envfile,"rb");
 		else
