@@ -1,3 +1,9 @@
+2025-02-18  Yukimasa Morimi  <h20y6m@yahoo.co.jp>
+
+	* convert.c, kp.{c,h}, styfile.c:
+	Use kpse_find_file to find style files.
+	https://github.com/texjporg/tex-jp-build/issues/175
+
 2025-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* Makefile.am: Adjust.
